--- a/package.json
+++ b/package.json
@@ -4,9 +4,20 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "history": "^4.7.2",
+    "jwt-decode": "^2.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-flexbox-grid": "^2.1.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.5",
+    "redux": "^4.0.0",
+    "redux-api-middleware": "^2.3.0",
+    "redux-persist": "^5.10.0",
+    "redux-persist-transform-filter": "0.0.18",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^3.4.5"
   },
   "scripts": {
